# ifsbench

./: .coverage  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  INSTALL.md  README.md  ifsbench-post-import.cmake.in  populate  pyproject.toml
.github/workflows/: docs.yaml  format_check.yaml  pytest.yaml
cmake/: ifsbench_download_python_wheels.cmake  ifsbench_get_python_wheels.cmake  ifsbench_python_macros.cmake  python_venv.cmake
docs/: Makefile
docs/source/: conf.py
ifsbench/: __init__.py  application.py  arch.py  benchmark.py  config_mixin.py  config_utils.py  darshanreport.py  data_file_reader.py  data_file_stats.py  drhook.py  env.py  files.py  gribfile.py  gstats.py  ifs.py  job.py  launcher.py  logging.py  multibenchmark.py  namelist.py  netcdf_file_reader.py  paths.py  pydantic.py  pydantic_utils.py  runrecord.py  serialisation_mixin.py  serialise_mixin.py  util.py  yaml.py
ifsbench/cli/: __init__.py  perfplot.py
ifsbench/command_line/: __init__.py  cli.py  click_launcher.py  nml_diff.py  perfplot.py
ifsbench/command_line/tests/: test_cli.py  (+1 more)
ifsbench/data/: __init__.py  datahandler.py  extracthandler.py  fetchhandler.py  namelisthandler.py  perturbationhandler.py  renamehandler.py
ifsbench/launch/: __init__.py  bashlauncher.py  click_launcher.py  ddtlauncher.py  directlauncher.py  launcher.py  mpirunlauncher.py  srunlauncher.py
ifsbench/launcher/: __init__.py  bashlauncher.py  launcher.py
ifsbench/plot/: __init__.py  barplot.py
ifsbench/results/: __init__.py  ensemble_stats.py  result_format.py
ifsbench/tests/: test_application.py  test_arch.py  test_benchmark.py  test_cmake.py  test_config_mixin.py  test_config_utils.py  test_darshanreport.py  test_data_file_stats.py  test_drhook.py  test_envhandler.py  test_files.py  test_gribfile.py  test_job.py  test_multibenchmark.py  test_namelist.py  test_netcdf_file_reader.py  test_pydantic_dataframe.py  test_serialisation_mixin.py  test_util.py  test_yaml.py
ifsbench/validation/: __init__.py  frame_close_validation.py  frame_util.py
scripts/: __init__.py
tests/: test_application.py  test_arch.py  test_cmake.py  test_envhandler.py  test_job.py
tests/launcher/: test_mpirunlauncher.py  test_srunlauncher.py
(+34 files in other folders)
